Kept anchors together to stop external link icon from wrapping

--- a/Web/Features/site.less
+++ b/Web/Features/site.less
@@ -94,4 +94,5 @@ a {
     md-icon {
         color: @link-colour;
     }
+    white-space: nowrap;
 }
